argocd/allclear/allclear-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allclear-server
  labels:
    app: allclear-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: allclear-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: allclear-server
    spec:
      serviceAccountName: allclear
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/allclear/allclear-server:latest # TODO
          name: allclear-server
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8080
          readinessProbe:
            httpGet:
              path: /health-check
              port: 8080
            timeoutSeconds: 3
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /health-check
              port: 8080
            failureThreshold: 20
---
apiVersion: v1
kind: Service
metadata:
  name: allclear-server
spec:
  type: ClusterIP
  selector:
    app: allclear-server
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: allclear-server
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - allclear-server.allclear.svc.cluster.local
    - allclear.wafflestudio.com # TODO
  http:
    - route:
        - destination:
            host: allclear-server
